--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -112,7 +112,29 @@
             android:background="#ff0000" >
         </LinearLayout>
     </RelativeLayout>
+    <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SQLite DB to SD Demo"/>
 
+    <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Export" />
+
+    <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create" />
+
+    <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete" />
 </LinearLayout>
 
 
